// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom open/close text 1`] = `
<body>
  <div>
    <div
      class="wrap"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
      <button
        aria-label="Open me"
        class="trigger btn"
        type="button"
      />
    </div>
  </div>
</body>
`;

exports[`custom open/close text 2`] = `
<body>
  <div>
    <div
      class="wrapHidden"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
      <button
        aria-label="Open me"
        class="trigger btn"
        type="button"
      />
    </div>
  </div>
  <div
    aria-modal="true"
    class="overlay"
    role="dialog"
    style="background-color: rgba(255, 255, 255, 0.95); transition-duration: 300ms; z-index: 2147483647;"
  >
    <div
      class="content"
      style="height: 0px; left: 0px; top: 0px; transform: scale(Infinity) translate(0px, 0px); transition-duration: 300ms; width: 0px;"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
    </div>
    <button
      aria-label="Close me"
      class="trigger btn"
      type="button"
    />
  </div>
</body>
`;

exports[`renders without browser environment 1`] = `
<body>
  <div
    class="wrap"
  >
    <img
      alt="foo"
      src="foo.jpg"
      width="500"
    />
    <button
      aria-label="Zoom image"
      class="trigger btn"
      type="button"
    />
  </div>
</body>
`;

exports[`when closed and then open 1`] = `
<body>
  <div>
    <div
      class="wrap"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
      <button
        aria-label="Zoom image"
        class="trigger btn"
        type="button"
      />
    </div>
  </div>
</body>
`;

exports[`when closed and then open 2`] = `
<body>
  <div>
    <div
      class="wrapHidden"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
      <button
        aria-label="Zoom image"
        class="trigger btn"
        type="button"
      />
    </div>
  </div>
  <div
    aria-modal="true"
    class="overlay"
    role="dialog"
    style="background-color: rgba(255, 255, 255, 0.95); transition-duration: 300ms; z-index: 2147483647;"
  >
    <div
      class="content"
      style="height: 0px; left: 0px; top: 0px; transform: scale(Infinity) translate(0px, 0px); transition-duration: 300ms; width: 0px;"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
    </div>
    <button
      aria-label="Unzoom image"
      class="trigger btn"
      type="button"
    />
  </div>
</body>
`;

exports[`when closed and then open 3`] = `
<body>
  <div>
    <div
      class="wrapHidden"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
      <button
        aria-label="Zoom image"
        class="trigger btn"
        type="button"
      />
    </div>
  </div>
  <div
    aria-modal="true"
    class="overlay"
    role="dialog"
    style="background-color: rgba(255, 255, 255, 0); transition-duration: 300ms; z-index: 2147483647;"
  >
    <div
      class="content"
      style="height: 0px; left: 0px; top: 0px; transform: scale(1) translate(0, 0); transition-duration: 300ms; width: 0px;"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
    </div>
    <button
      aria-label="Unzoom image"
      class="trigger btn"
      type="button"
    />
  </div>
</body>
`;

exports[`when closed and then open 4`] = `
<body>
  <div>
    <div
      class="wrap"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
      <button
        aria-label="Zoom image"
        class="trigger btn"
        type="button"
      />
    </div>
  </div>
</body>
`;

exports[`when open and then closed 1`] = `
<body>
  <div>
    <div
      class="wrapHidden"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
      <button
        aria-label="Zoom image"
        class="trigger btn"
        type="button"
      />
    </div>
  </div>
  <div
    aria-modal="true"
    class="overlay"
    role="dialog"
    style="background-color: rgba(255, 255, 255, 0); transition-duration: 300ms; z-index: 2147483647;"
  >
    <div
      class="content"
      style="height: 0px; left: 0px; top: 0px; transform: scale(1) translate(0, 0); transition-duration: 300ms; width: 0px;"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
    </div>
    <button
      aria-label="Unzoom image"
      class="trigger btn"
      type="button"
    />
  </div>
</body>
`;

exports[`when open and then closed 2`] = `
<body>
  <div>
    <div
      class="wrap"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
      <button
        aria-label="Zoom image"
        class="trigger btn"
        type="button"
      />
    </div>
  </div>
</body>
`;
